# xiaozhi-linux-SupportList

./: README.md
App/gui/: lvgl_xiaozhi
App/sound_app/: sound_app
BSP/: k230_canmv_dongshanpi_defconfig
BSP/device/config/chips/t113/configs/100ask/: sys_partition.fex
BSP/device/config/chips/v853/configs/100ask/: board.dts  uboot-board.dts
BSP/device/config/chips/v853/configs/100ask/linux/: config-4.9  sys_partition.fex
BSP/lichee/brandy-2.0/u-boot-2018/drivers/mtd/awnand/spinand/physic/: id.c
BSP/package/gui/libs/libpng/: Makefile
BSP/scripts/: reduce-rootfs-size.sh
Bsp/buildroot/buildroot-201902/configs/: sun8iw20p1_t113_nand_defconfig
app/gui/: lvgl_xiaozhi
app/sound_app/: sound_app
externPackage/websocketpp-0.8.1/: CMakeLists.txt
xiaozhi-linux/control_center/: Makefile  control_center.cpp  http.cpp  uuid.cpp  websocket_client.cpp
xiaozhi-linux/gui/: CMakeLists.txt  lv_conf.h  main.c  toolchain.cmake
xiaozhi-linux/gui/lv_100ask_xiaozhi/: CMakeLists.txt  build.sh  lv_conf.h  main.c  toolchain.cmake
xiaozhi-linux/gui/lvgl/src/drivers/display/drm/: lv_linux_drm.c
xiaozhi-linux/sound_app/: Makefile  aplay.cpp  ipc_udp.cpp  opus.cpp  record.cpp  sound_app.cpp
